<resources>
    <string name="app_name">PrelimExercises</string>

    <string name="hello_world">Hello world!</string>
    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="action_settings">Settings</string>
</resources>
