<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/red"
        android:padding="@dimen/padding_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:padding="@dimen/padding_textview"
        android:background="@color/orange"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:background="@color/yellow"
        android:padding="@dimen/padding_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10"
        android:background="@color/green"
        android:padding="@dimen/padding_textview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11"
        android:background="@color/blue"
        android:padding="@dimen/padding_textview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indigo"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_toLeftOf="@+id/textView12"
        android:layout_toStartOf="@+id/textView12"
        android:background="@color/indigo"
        android:padding="@dimen/padding_textview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/violet"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_toLeftOf="@+id/textView13"
        android:layout_toStartOf="@+id/textView13"
        android:background="@color/violet"
        android:padding="24dp" />
</RelativeLayout>